Automatically backed up by Learn

--- a/app/views/posts/edit.html.erb
+++ b/app/views/posts/edit.html.erb
@@ -1,11 +1,11 @@
 <h3>Post Form</h3>
 
-<%= fomr_for(@post) do |f| %>
+<%= form_for(@post) do |f| %>
   <label>Post title:</label><br>
   <%= f.text_field :title %><br>
 
   <label>Post description:</label><br>
   <%= f.text_area :description %><br>
   
-  <%= submit_tag "Submit Post" %>
+  <%= f.submit %>
 <% end %>
